# kagi-session-mcp

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  release-please-config.json
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: ci.yml  release-please.yml
src/: lib.rs  main.rs
src/adapters/: kagi_http.rs  mod.rs  serp_parser.rs  url_fetcher.rs
src/adapters/browser/: chromium.rs  firefox.rs  mod.rs  safari.rs
src/adapters/crypto/: linux.rs  macos.rs  mod.rs  windows.rs
src/app/: discovery.rs  mod.rs  search_service.rs
src/domain/: error.rs  mod.rs  model.rs  ports.rs
src/mcp/: mod.rs  schema.rs  server.rs
